adpg/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: adpg
  labels:
    app.kubernetes.io/part-of: adpg
